Fixed alignment

--- a/index.css
+++ b/index.css
@@ -52,6 +52,7 @@ a {
   color: white !important;
   padding-left: 1rem !important;
   padding-right: 1rem !important;
+  margin-left: 1rem;
   text-decoration: solid;
   width: fit-content;
 }
